@@ -3,7 +3,7 @@
 # Contributor: Alessio 'mOLOk' Bolognino <themolok@gmail.com>
 
 pkgname=transmission-cli
-pkgver=1.32
+pkgver=1.33
 pkgrel=1
 pkgdesc="Fast, easy, and free BitTorrent client (CLI tools and daemon)"
 arch=('i686' 'x86_64')
@@ -14,10 +14,10 @@ makedepends=('intltool')
 replaces=('transmission')
 backup=('etc/conf.d/transmissiond')
 install=transmission-cli.install
-source=(http://download.m0k.org/transmission/files/transmission-$pkgver.tar.bz2
+source=(http://mirrors.m0k.org/transmission/files/transmission-$pkgver.tar.bz2
         transmissiond
         transmissiond.conf)
-md5sums=('2525872f5c95886243f83ed513e3952b'
+md5sums=('097a538a10e41c9e631ef23b11a2ddfa'
          'e2326d412e25b4449ff663a5d4015e1a'
          '7b019a710493ec4f8b54a1f528e1981d')
 
